; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/ice1712/extr_ice1712.c_snd_ice1712_set_gpio_mask.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/ice1712/extr_ice1712.c_snd_ice1712_set_gpio_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_ice1712 = type { i32 }

@ICE1712_IREG_GPIO_WRITE_MASK = common dso_local global i32 0, align 4
@DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_ice1712*, i32)* @snd_ice1712_set_gpio_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_ice1712_set_gpio_mask(%struct.snd_ice1712* %0, i32 %1) #0 {
  %3 = alloca %struct.snd_ice1712*, align 8
  %4 = alloca i32, align 4
  store %struct.snd_ice1712* %0, %struct.snd_ice1712** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.snd_ice1712*, %struct.snd_ice1712** %3, align 8
  %6 = load i32, i32* @ICE1712_IREG_GPIO_WRITE_MASK, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @snd_ice1712_write(%struct.snd_ice1712* %5, i32 %6, i32 %7)
  %9 = load %struct.snd_ice1712*, %struct.snd_ice1712** %3, align 8
  %10 = load i32, i32* @DATA, align 4
  %11 = call i32 @ICEREG(%struct.snd_ice1712* %9, i32 %10)
  %12 = call i32 @inb(i32 %11)
  ret void
}

declare dso_local i32 @snd_ice1712_write(%struct.snd_ice1712*, i32, i32) #1

declare dso_local i32 @inb(i32) #1

declare dso_local i32 @ICEREG(%struct.snd_ice1712*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
